--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#about" class="aboutsec">About</a></li>
                 <li><a href="#trust-section" class="whythischatbot">Trusted Globally</a></li>
             </ul>
-            <button onclick="window.location.href='index .html';">Get Started</button>
+            <button onclick="window.location.href='loginpage.html';">Get Started</button>
         </div>
     </header>
 
@@ -32,7 +32,7 @@
                 🤖 Our AI-powered career advisor maps individual skills, analyzes career opportunities, and recommends personalized paths. By leveraging generative AI, it helps students and professionals discover strengths, prepare for the evolving job market, <br> and make smarter career decisions..!
             </p>
             <div class="expbut">
-                <button class="beingyourjourney" onclick="window.location.href='index .html';">Being Your Journey</button>
+                <button class="beingyourjourney" onclick="window.location.href='loginpage.html';">Being Your Journey</button>
                 <a href="#featuresp2"><button class="exploarfeatures">Explore Features</button></a>
             </div>
         </section>
@@ -208,4 +208,5 @@
   </section>
 
 </body>
+
 </html>
