--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebPage1</title>
+    <title>Personalized Career & Skill Advisor</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -210,4 +210,5 @@
 </body>
 
 </html>
+
 
