--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <img src="shyamrd.jpg" alt="Member 1" />
                     </div>
                     <h3 class="name">Shyam Raosaheb Desale</h3>
-                    <p class="role">Leader</p
+                    <p class="role">Founder</p
                     <p class="bio">👨‍💻 Enthusiastic Web Developer / Programmer.</p>
                     <ul class="skills">
                     <li>HTML</li><li>CSS</li><li>JavaScript</li>
@@ -126,7 +126,7 @@
                     <img src="atharvak.jpg" alt="Member 2" />
                     </div>
                     <h3 class="name">Atharv Ashok Kunde</h3>
-                    <p class="role">Member</p>
+                    <p class="role">Co-Founder</p>
                     <p class="bio">💡 Passion for Building Creative Tech Solutions.</p>
                     <ul class="skills">
                     <li>HTML</li><li>C++</li><li>GitHub</li>
@@ -138,7 +138,7 @@
                     <img src="vinitbaby.jpg" alt="Member 3" />
                     </div>
                     <h3 class="name">Vinit Vilas Bhamare</h3>
-                    <p class="role">Member</p>
+                    <p class="role">Managing Director</p>
                     <p class="bio">🌱 Always Learning New Tech & <br>Skills.</p>
                     <ul class="skills">
                     <li>HTML</li><li>JavaScript</li><li>GitHub</li>
@@ -210,5 +210,6 @@
 </body>
 
 </html>
+
 
 
